--- a/.github/workflows/N1-docker-simple.yml
+++ b/.github/workflows/N1-docker-simple.yml
@@ -11,9 +11,9 @@ on:
   release:
     types: [published]
 
-  #push:
-  #  branches: 
-  #    - master
+  push:
+    branches: 
+      - master
 
   #schedule:
   #  - cron: 0 8 * * 5
@@ -63,7 +63,8 @@ jobs:
       run: | 
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         git clone https://github.com/jefferymvp/luci-app-koolproxyR openwrt/package/luci-app-koolproxy-R
-        git clone https://github.com/niceguy3-31/backup.git openwrt/package
+        git clone https://github.com/niceguy3-31/backup.git smartdns
+        mv smartdns/* openwrt/package
     - name: Update & Install feeds
       working-directory: ./openwrt
       run: |
