--- a/.github/workflows/N1-docker-simple.yml
+++ b/.github/workflows/N1-docker-simple.yml
@@ -62,7 +62,7 @@ jobs:
         REPO_BRANCH: dev-lean-lede
       run: | 
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
-        git clone https://github.com/jefferymvp/luci-app-koolproxyR openwrt/package/luci-app-koolproxy-R
+        git clone https://github.com/niceguy3-31/luci-app-koolproxy.git openwrt/package/luci-app-koolproxy
         git clone https://github.com/niceguy3-31/backup.git smartdns
         mv smartdns/* openwrt/package
     - name: Update & Install feeds
