--- a/.github/workflows/N1-docker-simple.yml
+++ b/.github/workflows/N1-docker-simple.yml
@@ -11,15 +11,15 @@ on:
   release:
     types: [published]
 
-  push:
-    branches: 
-      - master
+  #push:
+    #branches: 
+      #- master
 
-  #schedule:
-  #  - cron: 0 8 * * 5
+  schedule:
+    - cron: 0 21 * * *
   
-  #watch:
-    #types: [started]
+  watch:
+    types: [started]
 
 jobs:
   build:
@@ -63,6 +63,7 @@ jobs:
       run: | 
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         git clone https://github.com/niceguy3-31/luci-app-koolproxy.git openwrt/package/luci-app-koolproxy
+        git clone https://github.com/tty228/luci-app-serverchan.git openwrt/package/luci-app-serverchan
         git clone https://github.com/niceguy3-31/backup.git smartdns
         mv smartdns/* openwrt/package
     - name: Update & Install feeds
