--- a/N1-dokcer-simple.config
+++ b/N1-dokcer-simple.config
@@ -1,10 +1,6 @@
 CONFIG_TARGET_armvirt=y
 CONFIG_TARGET_armvirt_64=y
 CONFIG_TARGET_armvirt_64_Default=y
-CONFIG_ARIA2_BITTORRENT=y
-CONFIG_ARIA2_NOXML=y
-CONFIG_ARIA2_OPENSSL=y
-CONFIG_ARIA2_WEBSOCKET=y
 CONFIG_DROPBEAR_ZLIB=y
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
@@ -83,8 +79,8 @@ CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_TAR_BZIP2=y
 CONFIG_PACKAGE_TAR_GZIP=y
 CONFIG_PACKAGE_TAR_XZ=y
+CONFIG_PACKAGE_acme=y
 CONFIG_PACKAGE_adblock=y
-CONFIG_PACKAGE_aria2=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_avahi-dbus-daemon=y
 CONFIG_PACKAGE_boost=y
@@ -108,6 +104,7 @@ CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_iptables-mod-filter=y
 CONFIG_PACKAGE_iptables-mod-nat-extra=y
+CONFIG_PACKAGE_iputils-arping=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_k3wifi=y
 CONFIG_PACKAGE_kcptun-client=y
@@ -155,10 +152,12 @@ CONFIG_PACKAGE_libnatpmp=y
 CONFIG_PACKAGE_libopenssl1.1=y
 CONFIG_PACKAGE_librrd1=y
 CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_libsysfs=y
 CONFIG_PACKAGE_libuhttpd-openssl=y
 CONFIG_PACKAGE_libuwsc-nossl=m
 CONFIG_PACKAGE_libuwsc-openssl=y
 CONFIG_PACKAGE_libwebsockets-full=y
+CONFIG_PACKAGE_luci-app-acme=y
 CONFIG_PACKAGE_luci-app-adblock=y
 CONFIG_PACKAGE_luci-app-brook-server=y
 CONFIG_PACKAGE_luci-app-control-timewol=y
@@ -184,7 +183,8 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=y
 # CONFIG_PACKAGE_luci-app-pppoe-server is not set
 CONFIG_PACKAGE_luci-app-privoxy=y
 CONFIG_PACKAGE_luci-app-qos=y
-CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-app-serverchan=y
+#CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-softethervpn=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
@@ -219,7 +219,7 @@ CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-privoxy-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-qos-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-softethervpn-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-statistics-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-tinyproxy-zh-cn=y
@@ -291,7 +291,8 @@ CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
 CONFIG_PACKAGE_shadowsocksr-libev-server=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 CONFIG_PACKAGE_simple-obfs=y
-CONFIG_PACKAGE_smartdns=y
+#CONFIG_PACKAGE_smartdns=y
+CONFIG_PACKAGE_socat=y
 CONFIG_PACKAGE_softethervpn5-bridge=y
 CONFIG_PACKAGE_softethervpn5-client=y
 CONFIG_PACKAGE_softethervpn5-libs=y
@@ -312,7 +313,6 @@ CONFIG_PACKAGE_xz-utils=y
 CONFIG_PACKAGE_zerotier=y
 CONFIG_PACKAGE_zsh=y
 CONFIG_PERL_NOCOMMENT=y
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE is not set
 # CONFIG_TARGET_ROOTFS_CPIOGZ is not set
 # CONFIG_TARGET_ROOTFS_INITRAMFS is not set
 # CONFIG_TARGET_ROOTFS_SQUASHFS is not set
@@ -336,10 +336,3 @@ CONFIG_first_card_nvram_zone="dev1"
 CONFIG_first_card_profile_path="/etc/wireless/mediatek/mt7622.1.dat"
 CONFIG_first_card_single_sku_path="/etc/wireless/mediatek/mt7615e-sku.dat"
 CONFIG_first_card_wds_ifname="wds"
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_BZIP2 is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_GZIP is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_LZ4 is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_LZMA is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_LZO is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_XZ is not set
