--- a/.github/workflows/N1-docker-simple.yml
+++ b/.github/workflows/N1-docker-simple.yml
@@ -77,6 +77,7 @@ jobs:
         CONFIG_FILE: 'N1-dokcer-simple.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        chmod u+x ./customize.sh && ./customize.sh
         cd openwrt && make defconfig
         
     - name: Download package
