--- a/.github/workflows/N1-docker-simple.yml
+++ b/.github/workflows/N1-docker-simple.yml
@@ -97,8 +97,9 @@ jobs:
           mkdir -p ./artifact/
           find openwrt/bin/targets/ -name "*sysupgrade*bin*" | xargs -i mv -f {} ./artifact/
           find openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
-    - name: Upload artifact
+          ls -lh ./artifact/
+    - name : Upload artifact
       uses: actions/upload-artifact@master
       with:
-        name: OpenWrt firmware
-        path: ./artifact/
+        name: OpenWrt
+        path: ./artifact
