--- a/.github/workflows/N1-docker-simple.yml
+++ b/.github/workflows/N1-docker-simple.yml
@@ -97,6 +97,7 @@ jobs:
           mkdir -p ./artifact/
           find openwrt/bin/targets/ -name "*sysupgrade*bin*" | xargs -i mv -f {} ./artifact/
           find openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
+          find openwrt/bin/targets/ -name "*rootfs*tar.gz*" | xargs -i mv -f {} ./artifact/
           ls -lh ./artifact/
     - name : Upload artifact
       uses: actions/upload-artifact@master
