--- a/.github/workflows/N1-docker-simple.yml
+++ b/.github/workflows/N1-docker-simple.yml
@@ -95,9 +95,10 @@ jobs:
       run: |
           rm -rf ./artifact/
           mkdir -p ./artifact/
-          find openwrt/bin/targets/ -name "*sysupgrade*bin*" | xargs -i mv -f {} ./artifact/
-          find openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
+          #find openwrt/bin/targets/ -name "*sysupgrade*bin*" | xargs -i mv -f {} ./artifact/
+          #find openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
           find openwrt/bin/targets/ -name "*rootfs*tar.gz*" | xargs -i mv -f {} ./artifact/
+          find openwrt/bin/targets/ -name "sha256sums|config.seed" | xargs -i mv -f {} ./artifact/
           ls -lh ./artifact/
     - name : Upload artifact
       uses: actions/upload-artifact@master
