--- a/.github/workflows/Build_OP_Newifi_D2.yml
+++ b/.github/workflows/Build_OP_Newifi_D2.yml
@@ -15,8 +15,8 @@ on:
   #  branches: 
   #    - master
 
-  #schedule:
-  #  - cron: 0 8 * * 5
+  schedule:
+    - cron: 0 21 * * *
   
   #watch:
   #  types: [started]
@@ -62,8 +62,10 @@ jobs:
         REPO_BRANCH: dev-lean-lede
       run: | 
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
-        git clone https://github.com/jefferymvp/luci-app-koolproxyR openwrt/package/luci-app-koolproxy-R
-        git clone https://github.com/niceguy3-31/backup.git openwrt/package
+        git clone https://github.com/niceguy3-31/luci-app-koolproxy.git openwrt/package/luci-app-koolproxy
+        git clone https://github.com/tty228/luci-app-serverchan.git openwrt/package/luci-app-serverchan
+        git clone https://github.com/niceguy3-31/backup.git smartdns
+        mv smartdns/* openwrt/package
     - name: Update & Install feeds
       working-directory: ./openwrt
       run: |
@@ -89,8 +91,17 @@ jobs:
       run: |
         echo -e "$(nproc) thread build."
         make -j$(nproc) V=s
+    - name: Assemble artifact
+      run: |
+          rm -rf ./artifact/
+          mkdir -p ./artifact/
+          find openwrt/bin/targets/ -name "*sysupgrade*bin*" | xargs -i mv -f {} ./artifact/
+          #find openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
+          #find openwrt/bin/targets/ -name "*rootfs*tar.gz*" | xargs -i mv -f {} ./artifact/
+          find openwrt/bin/targets/ -name "sha256sums|config.seed" | xargs -i mv -f {} ./artifact/
+          ls -lh ./artifact/
     - name : Upload artifact
       uses: actions/upload-artifact@master
       with:
         name: OpenWrt
-        path: openwrt/bin
+        path: ./artifact
