--- a/.github/workflows/Build_OP_Newifi_Mini.yml
+++ b/.github/workflows/Build_OP_Newifi_Mini.yml
@@ -72,7 +72,7 @@ jobs:
         CONFIG_FILE: 'NewifiMini.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x ./customize.sh && ./customize.sh
+        #chmod +x ./customize.sh && ./customize.sh
         cd openwrt && make defconfig
         
     - name: Download package
