smartdns,passwall,unblocknetmusic,koolproxy all is ok

--- a/N1-dokcer-simple.config
+++ b/N1-dokcer-simple.config
@@ -31,18 +31,15 @@ CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_brook=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_frps=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_iptables-mod-filter=y
 CONFIG_PACKAGE_iptables-mod-nat-extra=y
 CONFIG_PACKAGE_iputils-arping=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_kcptun-client=y
-CONFIG_PACKAGE_kmod-ipt-filter=y
 CONFIG_PACKAGE_kmod-ipt-nat-extra=y
 CONFIG_PACKAGE_kmod-ipt-nat6=y
 CONFIG_PACKAGE_kmod-iptunnel4=y
@@ -52,7 +49,6 @@ CONFIG_PACKAGE_kmod-sit=y
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb-printer=y
-CONFIG_PACKAGE_libblkid=y
 # CONFIG_PACKAGE_libbz2 is not set
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcares=y
@@ -61,7 +57,6 @@ CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libevent2=y
 # CONFIG_PACKAGE_libexpat is not set
-CONFIG_PACKAGE_libfdisk=y
 # CONFIG_PACKAGE_libffi is not set
 # CONFIG_PACKAGE_libgdbm is not set
 CONFIG_PACKAGE_libhttp-parser=y
@@ -69,24 +64,24 @@ CONFIG_PACKAGE_libiconv-full=y
 CONFIG_PACKAGE_liblzo=y
 CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libopenssl1.1=y
-CONFIG_PACKAGE_libsmartcols=y
+CONFIG_PACKAGE_librpc=y
 # CONFIG_PACKAGE_libsqlite3 is not set
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libsysfs=y
 CONFIG_PACKAGE_libuhttpd-openssl=y
 CONFIG_PACKAGE_libwebsockets-full=y
 # CONFIG_PACKAGE_libxml2 is not set
+CONFIG_PACKAGE_lsof=y
 CONFIG_PACKAGE_luci-app-adblock=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_luci-app-brook-server=y
-CONFIG_PACKAGE_luci-app-control-mia=y
 CONFIG_PACKAGE_luci-app-control-timewol=y
-CONFIG_PACKAGE_luci-app-control-weburl=y
 # CONFIG_PACKAGE_luci-app-cpufreq is not set
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-frps=y
 CONFIG_PACKAGE_luci-app-haproxy-tcp=y
+CONFIG_PACKAGE_luci-app-kcptun=y
 CONFIG_PACKAGE_luci-app-koolproxy=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
@@ -109,7 +104,6 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-trojan-server=y
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-udpxy=y
 CONFIG_PACKAGE_luci-app-uhttpd=y
 CONFIG_PACKAGE_luci-app-unblockmusic=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
@@ -117,11 +111,10 @@ CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-i18n-adblock-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-brook-server-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-control-mia-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-control-timewol-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-control-weburl-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-frps-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-haproxy-tcp-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-kcptun-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
@@ -135,7 +128,6 @@ CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-theme-argon-dark-mod=y
-CONFIG_PACKAGE_mac-telnet-client=y
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_nano=y
@@ -182,7 +174,6 @@ CONFIG_PACKAGE_softethervpn5-libs=y
 CONFIG_PACKAGE_softethervpn5-server=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_udpxy=y
 CONFIG_PACKAGE_v2ray-plugin=y
 # CONFIG_PACKAGE_vsftpd-alt is not set
 # CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE is not set
