--- a/N1-dokcer-simple.config
+++ b/N1-dokcer-simple.config
@@ -1,6 +1,13 @@
 CONFIG_TARGET_armvirt=y
 CONFIG_TARGET_armvirt_64=y
 CONFIG_TARGET_armvirt_64_Default=y
+CONFIG_BRCMFMAC_SDIO=y
+CONFIG_BRCMFMAC_USB=y
+CONFIG_DEFAULT_ca-certificates=y
+CONFIG_DEFAULT_luci-proto-relay=y
+CONFIG_DRIVER_11AC_SUPPORT=y
+CONFIG_DRIVER_11N_SUPPORT=y
+CONFIG_DRIVER_11W_SUPPORT=y
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
 CONFIG_LIBCURL_FTP=y
@@ -28,11 +35,16 @@ CONFIG_PACKAGE_boost=y
 CONFIG_PACKAGE_boost-date_time=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
+CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio=y
+CONFIG_PACKAGE_brcmfmac-firmware-43455-sdio=y
+CONFIG_PACKAGE_brcmfmac-firmware-usb=y
 CONFIG_PACKAGE_brook=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_frps=y
+CONFIG_PACKAGE_hostapd=y
+CONFIG_PACKAGE_hostapd-common=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_iptables-mod-nat-extra=y
@@ -40,15 +52,24 @@ CONFIG_PACKAGE_iputils-arping=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_kcptun-client=y
+CONFIG_PACKAGE_kmod-b44=y
+CONFIG_PACKAGE_kmod-brcmfmac=y
+CONFIG_PACKAGE_kmod-brcmutil=y
+CONFIG_PACKAGE_kmod-cfg80211=y
 CONFIG_PACKAGE_kmod-ipt-nat-extra=y
 CONFIG_PACKAGE_kmod-ipt-nat6=y
 CONFIG_PACKAGE_kmod-iptunnel4=y
+CONFIG_PACKAGE_kmod-libphy=y
+CONFIG_PACKAGE_kmod-mii=y
+CONFIG_PACKAGE_kmod-mmc=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nls-base=y
 CONFIG_PACKAGE_kmod-sit=y
+CONFIG_PACKAGE_kmod-ssb=y
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb-printer=y
+CONFIG_PACKAGE_libblkid=y
 # CONFIG_PACKAGE_libbz2 is not set
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcares=y
@@ -62,21 +83,23 @@ CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libhttp-parser=y
 CONFIG_PACKAGE_libiconv-full=y
 CONFIG_PACKAGE_liblzo=y
+CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libopenssl1.1=y
 CONFIG_PACKAGE_librpc=y
+CONFIG_PACKAGE_libsmartcols=y
 # CONFIG_PACKAGE_libsqlite3 is not set
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libsysfs=y
 CONFIG_PACKAGE_libuhttpd-openssl=y
 CONFIG_PACKAGE_libwebsockets-full=y
 # CONFIG_PACKAGE_libxml2 is not set
+CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_lsof=y
 CONFIG_PACKAGE_luci-app-adblock=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_luci-app-brook-server=y
 CONFIG_PACKAGE_luci-app-control-timewol=y
-# CONFIG_PACKAGE_luci-app-cpufreq is not set
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-frps=y
@@ -126,8 +149,11 @@ CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 # CONFIG_PACKAGE_luci-lib-fs is not set
 CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-proto-relay=y
 CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-theme-argon-dark-mod=y
+CONFIG_PACKAGE_luci-theme-argon-light-mod=y
+CONFIG_PACKAGE_luci-theme-darkmatter=y
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_nano=y
@@ -159,6 +185,7 @@ CONFIG_PACKAGE_p910nd=y
 # CONFIG_PACKAGE_python-unittest is not set
 # CONFIG_PACKAGE_python-xml is not set
 CONFIG_PACKAGE_redsocks2=y
+CONFIG_PACKAGE_relayd=y
 # CONFIG_PACKAGE_rp-pppoe-common is not set
 # CONFIG_PACKAGE_rp-pppoe-relay is not set
 # CONFIG_PACKAGE_rp-pppoe-server is not set
@@ -176,7 +203,7 @@ CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_v2ray-plugin=y
 # CONFIG_PACKAGE_vsftpd-alt is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE is not set
+CONFIG_PACKAGE_wireless-regdb=y
 # CONFIG_TARGET_ROOTFS_CPIOGZ is not set
 # CONFIG_TARGET_ROOTFS_INITRAMFS is not set
 # CONFIG_TARGET_ROOTFS_SQUASHFS is not set
@@ -184,18 +211,6 @@ CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_BZIP2 is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_GZIP is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_LZ4 is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_LZMA is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_LZO is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE is not set
-# CONFIG_TARGET_INITRAMFS_COMPRESSION_XZ is not set
-# CONFIG_TARGET_armvirt_32_Default is not set
-# CONFIG_TARGET_x86_64 is not set
-# CONFIG_TARGET_x86_64_Generic is not set
-# CONFIG_TARGET_x86_core2 is not set
-# CONFIG_TARGET_x86_generic is not set
-# CONFIG_TARGET_x86_geode is not set
-# CONFIG_TARGET_x86_legacy is not set
-# CONFIG_TARGET_x86_zen is not set
+# CONFIG_BRCMFMAC_PCIE is not set
+CONFIG_DEFAULT_ca-certificates=y
+CONFIG_DEFAULT_luci-proto-relay=y
