--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -10,8 +10,8 @@ on:
     #branches: 
       #- master
 
-  schedule:
-    - cron: 0 21 * * *
+  #schedule:
+    #- cron: 0 21 * * *
   
   watch:
     types: [started]
