--- a/.github/workflows/Build_OP_Newifi_D2.yml
+++ b/.github/workflows/Build_OP_Newifi_D2.yml
@@ -13,8 +13,8 @@ on:
   #schedule:
     #- cron: 0 21 * * *
   
-  watch:
-    types: [started]
+  #watch:
+    #types: [started]
 
 jobs:
   build:
